--- a/Example/Rudder-CustomerIO/Base.lproj/Main.storyboard
+++ b/Example/Rudder-CustomerIO/Base.lproj/Main.storyboard
@@ -18,7 +18,50 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="67" translatesAutoresizingMaskIntoConstraints="NO" id="G2l-bR-g1g">
+                                <rect key="frame" x="156" y="257" width="81" height="338.33333333333326"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GWi-bE-qc8">
+                                        <rect key="frame" x="0.0" y="0.0" width="81" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Identify"/>
+                                        <connections>
+                                            <action selector="identifyAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="LeM-3n-xUk"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K52-jD-an8">
+                                        <rect key="frame" x="0.0" y="101.33333333333331" width="81" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Track"/>
+                                        <connections>
+                                            <action selector="trackAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="Zix-sE-rF7"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MO-5l-INh">
+                                        <rect key="frame" x="0.0" y="202.66666666666669" width="81" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Screen"/>
+                                        <connections>
+                                            <action selector="screenAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="3gY-vN-p2w"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2AP-OH-92g">
+                                        <rect key="frame" x="0.0" y="304" width="81" height="34.333333333333314"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Reset"/>
+                                        <connections>
+                                            <action selector="resetAction:" destination="whP-gf-Uak" eventType="touchUpInside" id="BIm-FW-uOd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="G2l-bR-g1g" firstAttribute="centerX" secondItem="TpU-gO-2f1" secondAttribute="centerX" id="3Tm-OV-YBf"/>
+                            <constraint firstItem="G2l-bR-g1g" firstAttribute="centerY" secondItem="TpU-gO-2f1" secondAttribute="centerY" id="oYH-8J-7sa"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
